# Maya

./: CMakeLists.txt  helper.cmake  readme.MD
.github/workflows/: build.yml
src/: main.cpp
src/player/: audio_pipeline.cpp  audio_pipeline.hpp  audio_ring_buffer.hpp  db.cpp  db.hpp  discord_rpc.cpp  discord_rpc.hpp  dl_mgr.cpp  dl_mgr.hpp  search_engine.hpp  track.hpp
src/ui/: batch_dlg.cpp  batch_dlg.hpp  discover_view.cpp  discover_view.hpp  downloads_view.cpp  downloads_view.hpp  equalizer_visualizer.cpp  equalizer_visualizer.hpp  icons.hpp  library_view.cpp  library_view.hpp  main_window.cpp  main_window.hpp  metadata_editor.cpp  metadata_editor.hpp  player_controls.cpp  player_controls.hpp  playlist_dialog.cpp  playlist_dialog.hpp  playlist_view.cpp  playlist_view.hpp  playlists_view.cpp  playlists_view.hpp  search_overlay.cpp  search_overlay.hpp  settings_view.cpp  settings_view.hpp  sidebar.cpp  sidebar.hpp  title_bar.cpp  title_bar.hpp  track_model.cpp  track_model.hpp
